# sbom-harbor

./: .editorconfig  .env-example  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .pylintrc  .yarnrc.yml  404.html  ARCHITECTURE.md  Cargo.toml  Dockerfile.debug  ENRICHMENTS.md  README.md  amplify.yml  cdk.context.json  cdk.json  dagger.cue  dagger.local.cue  dagger.local.cue.example  deploy-pilot.sh  deploy-preamble.sh  deploy-ui-preamble.sh  deploy-ui.sh  deploy.sh  destroy.sh  docker-compose.yml  env  introduction.html  lerna.json  mockoon.json  openapi.yaml  package-lock.json  package.json  print.html  pyproject.toml  road-map.html  run.py  (+5 more)
api/: Cargo.toml  Dockerfile
api/openapi/: USAGE.md  build.sh
api/openapi/client/: config.yaml
api/openapi/tests/: test-context.js
api/src/: app.rs  auth.rs  errors.rs  lib.rs
api/src/controllers/: build_target.rs  health.rs  mod.rs  product.rs  repository.rs  team.rs  token.rs  vendor.rs
api/tests/: product.rs  product_ingest.rs  test-api.http  vendor.rs
api/tests/common/: mod.rs
cli/: Cargo.toml  README.md  run.sh
cli/src/: errors.rs  lib.rs
cli/src/commands/: analyze.rs  enrich.rs  mod.rs  pilot.rs  sbom.rs
cli/src/commands/analyze/: mod.rs  sbom_detail.rs  sbom_vulnerability.rs
cli/src/commands/construct/: mod.rs  nvd.rs  purl2cpe.rs
cli/src/commands/enrich/: dependency_track.rs  epss.rs  mod.rs  purl2cpe.rs  sbom_scorecard.rs  snyk.rs
cli/src/commands/github/: mod.rs  mongo.rs  provider.rs  repo.rs
cli/src/commands/health/: mod.rs
cli/src/commands/ingest/: filesystem.rs  github.rs  mod.rs  repository.rs  snyk.rs
cli/src/commands/pilot/: github.rs  mod.rs  snyk.rs
cli/src/commands/snyk/: mod.rs  snyk.rs  snyk_data_model.rs
cli/src/common/: mod.rs
cli/src/common/analytics/: mod.rs  sbom_vulnerabilities.rs
cli/src/common/enrichments/: mod.rs
cli/src/common/ingestion/: mod.rs
cli/src/http/: mod.rs
client/: Cargo.toml  TO_BE_DEPRECATED.md
client/src/: client.rs  errors.rs  lib.rs  models.rs  team.rs
dagger-build/: Cargo.toml
dagger-build/src/: errors.rs  lib.rs  runner.rs
dagger-build/tests/: runner.rs
extensions/cms/: Cargo.toml
extensions/cms/src/: errors.rs  lib.rs
extensions/cms/src/commands/: export.rs  fisma.rs  ionchannel.rs  mod.rs
extensions/cms/src/services/: mod.rs
extensions/cms/src/tasks/: export.rs  fisma.rs  ionchannel.rs  mod.rs
harbor-rs/: Cargo.toml  Dockerfile.lambda  Dockerfile.lambda-builder  Dockerfile.pilot  Dockerfile.pilot-builder  PILOT.md  README.md  build.sh  lambda-build.sh  latest.sh  pilot-build.sh
harbor-rs/api/: Cargo.toml
harbor-rs/api/src/: auth.rs  errors.rs  lib.rs
harbor-rs/api/src/controllers/: mod.rs  team.rs
harbor-rs/cargo-generate/: aquia-generate.sh  bundle.json  index.js  output.json
harbor-rs/cli/: Cargo.toml  run.sh
harbor-rs/cli/src/: lib.rs
harbor-rs/cli/src/commands/: mod.rs  pilot.rs
harbor-rs/client/src/: client.rs  lib.rs
harbor-rs/core/: Cargo.toml
harbor-rs/core/src/: config.rs  error.rs  errors.rs  lib.rs  models.rs
harbor-rs/core/src/auth/: auth.rs  migrations.rs  mod.rs
harbor-rs/core/src/entities/: codebase.rs  member.rs  mod.rs  project.rs  team.rs  token.rs
harbor-rs/core/src/migrations/: init_auth.rs  mod.rs
harbor-rs/core/src/services/: mod.rs  pilot.rs  team.rs
harbor-rs/core/tests/: migrations.rs  services.rs
harbor-rs/infrastructure/cognito/: main.tf  outputs.tf  variables.tf
harbor-rs/pilot/: lib.rs
harbor-rs/pilot/src/: harbor-pilot.yml
harbor-rs/platform/: Cargo.toml
harbor-rs/platform/src/: config.rs  errors.rs  lib.rs
harbor-rs/platform/src/auth/: README.md
harbor-rs/platform/src/mongodb/: store.rs
harbor-rs/platform/tests/common/: mongodb.rs
harbor-rs/src/: authorizer.rs  client.rs  entities.rs  entities_old.rs  http.rs  importer.rs  lib.rs  pilot.rs
harbor-rs/src/api/: mod.rs  service.rs  types.rs
harbor-rs/src/aws/: cognito.rs  mod.rs  secretsmanager.rs
harbor-rs/src/entities/: codebase.rs  member.rs  mod.rs  project.rs  team.rs  token.rs
harbor-rs/src/system/: authorizer.rs  mod.rs
harbor-rs/src/team/: delete_team.rs  get_team.rs  get_teams.rs  mod.rs  post_team.rs  put_team.rs
harbor-rs/tests/: api.rs  authorizer.rs  aws.rs  client.rs  entities.rs  pilot.rs
harbor-rs/tests/common/: mod.rs
harbor-rs/tests/fixtures/: README.md  apigwv2-proxy-request-template.json
pilot/: Cargo.toml  DEPRECATED.md
platform/: Cargo.toml
platform/src/: config.rs  errors.rs  lib.rs  naming.rs
platform/src/auth/: mod.rs
platform/src/cognito/: mod.rs
platform/src/cryptography/: mod.rs  sha256.rs
platform/src/encoding/: base64.rs  mod.rs  urlencoding.rs
platform/src/filesystem/: mod.rs
platform/src/hyper/: client.rs  mod.rs
platform/src/mongodb/: analytics.rs  migrations.rs  mod.rs  service.rs  store.rs
platform/src/mongodb/auth/: authorization.rs  init_default_auth.rs  mod.rs
platform/src/opentelemetry/: metrics.rs  mod.rs
platform/src/opentelemetry/metrics/: batch.rs  facade.rs  mod.rs  prometheus.rs
platform/src/persistence/: mod.rs
platform/src/persistence/s3/: mod.rs
platform/src/time/: mod.rs
platform/tests/: mongodb.rs
platform/tests/common/: mod.rs  mongodb.rs
sdk/core/: Cargo.toml
sdk/core/src/: config.rs  errors.rs  lib.rs
sdk/core/src/auth/: authenticator.rs  mod.rs
sdk/core/src/config/: config.example.toml  mod.rs
sdk/core/src/entities/: mod.rs
sdk/core/src/health/: mod.rs
sdk/core/src/migrations/: mod.rs
sdk/core/src/services/: mod.rs
sdk/core/src/tasks/: mod.rs
sdk/core/src/testing/: mod.rs
sdk/core/tests/: migrations.rs  product.rs  services.rs
sdk/core/tests/common/: mod.rs
sdk/extension-template/: Cargo.toml
sdk/extension-template/src/: errors.rs  lib.rs
sdk/extension-template/src/commands/: example.rs  mod.rs
sdk/extension-template/src/tasks/: example.rs
sdk/platform/: Cargo.toml
sdk/platform/src/: errors.rs  lib.rs
sdk/platform/src/cryptography/: argon2.rs  mod.rs  sha256.rs
sdk/platform/tests/: mongodb.rs
(+933 files in other folders)
