[workspace]
members = [
    "api",
    "sdk/core",
    "extensions/cms",
    "sdk/platform",
    "cli",
    "sdk/extension-template",
    "dagger-build",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.68.0"
edition = "2021"
authors = ["CMS SBOM Harbor Team"]
documentation = "https://github.com/cms-enterprise/sbom-harbor"
license = "MIT"
repository = "https://github.com/CMS-Enterprise/sbom-harbor"
keywords = ["SBOM", "harbor", "cli"]
readme = "README.md"
