[tool.poetry]
name = "cyclonedx"
version = "0.1.0"
description = "Api to ingest and process SBOMS"
authors = ["qtpeters <quinn.t.peters@gmail.com>"]

[tool.poetry.scripts]
clean = "scripts.build:clean"
build = "scripts.build:run"
lint = "scripts.build:lint"
test = "scripts.build:test"
package = "scripts.build:package"
deploy = "scripts.deploy:run"
e2e = "tests.e2e:post_test"
dodep = "scripts.deploy:dodep"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.10"
jsonschema = "^4.4.0"
requests = "^2.27.1"
constructs = "^10.0.76"
requests-toolbelt = "^0.9.1"
"aws-cdk.aws-lambda-python-alpha" = "^2.15.0-alpha.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.7.0"
aws-cdk-lib = "^2.14.0"
black = "^22.1.0"
pre-commit = "^2.17.0"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
