[package]
name = "harbor-api"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1.63"
aws-config = "0.54.1"
axum = { version = "0.6.4", features = ["form", "headers", "http2", "json", "macros", "matched-path", "multipart", "query", "tokio", "tower-log", "ws"] }
chrono = "0.4.5"
jsonwebtoken = "8.2.0"
git2 = "0.16.1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
thiserror = "1.0"
tower-http = { version = "0.3.5", features = ["cors", "trace"]}
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
tokio-test = "*"

[dependencies.harbcore]
path = "../core"
version = "0.1.0"

[dependencies.platform]
path = "../platform"
version = "0.1.0"

[[bin]]
name = "harbor-api"
path = "src/bin/main.rs"
