[package]
name = "harbor-cli"
version = "0.0.1"
description = "CLI to simply emit various events to a specified Harbor instance to start, update or terminate processes."
authors = ["Quinn Peters <quinn.peters@aquia.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/CMS-Enterprise/sbom-harbor"
keywords = ["SBOM", "harbor", "cli"]
readme = "README.md"

[dependencies]
clap = { version = "4.1.4", default-features = true }
serde = "1.0.147"
serde_json = "1.0.87"
serde_urlencoded = "0.7"
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0"
percent-encoding = "^2.1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.1", features =["http2"] }
anyhow = "1.0.68"
async-trait = "0.1.66"
mongodb = { version = "2.3.1", features = ["aws-auth", "tokio-runtime"] }
futures = "0.3.27"

[dependencies.harbcore]
path = "../core"
version = "0.1.0"

[dependencies.platform]
path = "../platform"
version = "0.1.0"
