[package]
name = "harbor-cli"
version = "0.0.1"
description = "CLI to simply emit various events to a specified Harbor instance to start, update or terminate processes."
authors = ["Quinn Peters <quinn.peters@aquia.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/CMS-Enterprise/sbom-harbor"
keywords = ["SBOM", "harbor", "cli"]
readme = "README.md"

[dependencies]
clap = { version = "4.1.4", default-features = true, features = ["derive"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0"
percent-encoding = "^2.1.0"
async-trait = "0.1.66"
mongodb = { version = "2.3.1", features = ["aws-auth", "tokio-runtime"] }
futures = "0.3.27"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
cargo-modules = "0.7.5"

[dependencies.harbcore]
path = "../core"
version = "0.1.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.platform]
path = "../platform"
version = "0.1.0"

[dependencies.harbor-client]
path = "../client"
version = "0.1.0"

[[bin]]
name = "harbor-cli"
path = "src/bin/main.rs"

