[package]
name = "harbor-cli"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
description = "CLI used to encapsulate batch processes and utility functions for local development."


[dependencies]
clap = { version = "4.1.4", default-features = true, features = ["derive"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
thiserror = "1.0"
percent-encoding = "^2.1.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.platform]
path = "../platform"
version = "0.1.0"

[dependencies.harbcore]
path = "../core"
version = "0.1.0"

[[bin]]
name = "harbor-cli"
path = "src/bin/main.rs"

