[package]
name = "harbor-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
anyhow = "1.0.68"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.1", features =["http2"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
tokio-test = "*"

[dependencies.harbor-api]
path = "../api"
version = "0.1.0"
