[package]
name = "harbor"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.53.0"
aws_lambda_events = "0.7.2"
aws-sdk-cognitoidentityprovider = "0.23.0"
futures = "0.3"
jsonwebtoken = "8.2.0"
jsonwebkey = "0.3.5"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0.68"
chrono = "0.4.23"
git2 = "0.16.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.1", features =["http2"] }
serde = "1.0.147"
serde_json = "1.0.87"
serde_urlencoded = "0.7"
url = "2.3.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
aws_lambda_events = "0.7.2"
base64 = "0.13.1"
ctor = "0.1.26"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
tokio-test = "*"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[lib]
name = "harbor"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
proc-macro = false     # Set to `true` for a proc-macro library.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "importer"
path = "src/bin/importer/importer.rs"

[[bin]]
name = "pilot"
path = "src/bin/pilot/pilot.rs"

[[bin]]
name = "authorizer"
path = "src/bin/authorizer/authorizer.rs"
