[package]
name = "harbor-pilot"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.1", features =["http2"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
tokio-test = "*"

[[bin]]
name = "harbor-pilot"
path = "src/bin/pilot.rs"
