[package]
name = "platform"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
async-trait = "0.1.63"
aws-sdk-secretsmanager = "0.24.0"
aws-config = "0.54.1"
aws-sdk-cognitoidentityprovider = "0.24.0"
aws-sdk-config = "0.24.0"
aws-types = "0.54.1"
chrono = "0.4.5"
futures = "0.3.19"
futures-util = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.1", features =["http2"] }
mongodb = { version = "2.3.1", features = ["aws-auth", "tokio-runtime"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
tokio = "1.25.0"
tracing = "0.1"
tracing-subscriber = "0.3.16"
thiserror = "1.0"
uuid = "1.3.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
futures = "0.3.19"
futures-util = "0.3.19"
tokio-test = "*"
uuid = "1.3.0"

[lib]
name = "platform"
path = "src/lib.rs"
proc-macro = false
crate-type = ["lib"]
