[package]
name = "harbor-cli"
version = "0.0.1"
description = "CLI to simply emit various events to a specified Harbor instance to start, update or terminate processes."
authors = ["Quinn Peters <quinn.peters@aquia.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/CMS-Enterprise/sbom-harbor"
keywords = ["SBOM", "harbor", "cli"]
readme = "README.md"

[dependencies]
clap = { version = "4.1.4", default-features = true }
octocrab = "0.18.1"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"

[dependencies.harbor-core]
path = "../core"
version = "0.1.0"
