[package]
name = "harbor-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

[dependencies]
async-trait = "0.1.63"
aws-config = "0.54.1"
aws-sdk-cognitoidentityprovider = "0.24.0"
axum = { version = "0.6.4", features = ["form", "http2", "json", "macros", "matched-path", "multipart", "query", "tokio", "tower-log", "ws"] }
chrono = "0.4.5"
git2 = "0.16.1"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
thiserror = "1.0"
tower-http = { version = "0.3.5", features = ["cors"]}
url = "2.3.1"
uuid = "1.3.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
tokio-test = "*"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dependencies.aqum]
path = "../aqum"
version = "0.1.0"

[lib]
name = "harbor_core"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.
proc-macro = false     # Set to `true` for a proc-macro library.
crate-type = ["lib"]   # The crate types to generate.
