[package]
name = "harbcore"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.63"
chrono = { version = "0.4.5", features = ["serde"] }
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
regex = "1.7.3"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.25"
serde_with = "2.3.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
thiserror = "1.0"
tower-http = { version = "0.3.5", features = ["cors"]}
url = "2.3.1"
uuid = "1.3.0"
urlencoding = "2.1.3"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
tokio-test = "*"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dependencies.platform]
path = "../platform"
version = "0.1.0"

[lib]
name = "harbcore"
path = "src/lib.rs"
proc-macro = false
crate-type = ["lib"]
