[package]
name = "extension-template"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.63"
clap = { version = "4.1.4", default-features = true, features = ["derive"] }
serde = { version = "1.0.92", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.harbcore]
path = "../core"
version = "0.1.0"

[dependencies.platform]
path = "../platform"
version = "0.1.0"

[[bin]]
name = "example"
path = "src/bin/main.rs"
