[package]
name = "platform"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1.63"
aws-config = "0.54.1"
aws-sdk-cognitoidentityprovider = "0.24.0"
aws-sdk-config = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-types = "0.54.1"
base64 = "0.21.0"
data-encoding = "2.3.3"
chrono = "0.4.5"
futures = "0.3.19"
futures-util = "0.3.19"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.23.1", features =["http2"] }
mongodb = { version = "2.3.1", features = ["aws-auth", "tokio-runtime"] }
regex = "1.7.3"
ring = "0.16.20"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
tempfile = "3.6.0"
tokio = "1.25.0"
tonic = "0.8.3"
tracing = "0.1"
tracing-subscriber = "0.3.16"
thiserror = "1.0"
urlencoding = "2.1.2"
uuid = "1.3.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
ctor = "0.1.26"
dotenv = "0.15.0"
futures = "0.3.19"
futures-util = "0.3.19"
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "metrics", "testing", "trace"] }
tokio-test = "*"
uuid = "1.3.0"

[lib]
name = "platform"
path = "src/lib.rs"
proc-macro = false
crate-type = ["lib"]
